fixing some overflow

--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -1,11 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-
-
 @import "tailwindcss/base";
-
 @import "tailwindcss/components";
-
 @import "tailwindcss/utilities";
 
 @import url("./fonts.css");
@@ -15,8 +11,6 @@
 @import url("./Login.css");
 @import "components/TopLeftNav.module";
 
-// @import url("./components/TopLeftNav.module.scss");
-
 :root {
   --wrapper-width: 1280px;
   --color-background: linear-gradient(149deg, #15011E 3.4%, #3D0655 315.88%);
@@ -24,21 +18,24 @@
   --transition: cubic-bezier(0.59, 0, 0.06, 1);
   --light: white;
   --dark: black;
-
 }
 
-
 * {
-
   z-index: 1;
   margin: 0;
   padding: 0;
   background: none;
 }
 
-html, body {
-  // overflow: auto;
-  height: 100%;
-  width: 100%;
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 8rem;
+  font-size: 100%;
+}
+
+body {
+  position: relative;
+  overflow-x: hidden;
   background: var(--color-background);
+  overflow-x: hidden;
 }
